https://issues.apache.org/jira/browse/AMQCPP-553

Fix a leak that occurs when consumers are closed but they leave some
audit data in the ConnectionAudit instance..